新增菜单栏功能按键

--- a/panel_gui/control_panel.ui
+++ b/panel_gui/control_panel.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>基于人工智能的生产流程分析与可视化系统</string>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: rgb(0, 0, 0);</string>
@@ -58,11 +58,10 @@
 font: 29pt &quot;宋体&quot;;
 color: rgb(90, 174, 242);
 color: rgb(85, 255, 255);
-color: rgb(255, 255, 255);
-</string>
+color: rgb(255, 255, 255);</string>
       </property>
       <property name="text">
-       <string>系统控制平台</string>
+       <string>基于人工智能的生产流程分析与可视化系统</string>
       </property>
       <property name="scaledContents">
        <bool>true</bool>
@@ -157,7 +156,7 @@ color: rgb(255, 255, 255);
             </property>
             <property name="minimumSize">
              <size>
-              <width>500</width>
+              <width>551</width>
               <height>320</height>
              </size>
             </property>
@@ -200,8 +199,14 @@ color: rgb(255, 255, 255);
             </property>
             <property name="minimumSize">
              <size>
-              <width>0</width>
+              <width>551</width>
               <height>300</height>
+             </size>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>16777215</width>
+              <height>350</height>
              </size>
             </property>
             <property name="styleSheet">
@@ -222,7 +227,7 @@ color: rgb(255, 255, 255);
             </property>
             <property name="minimumSize">
              <size>
-              <width>500</width>
+              <width>551</width>
               <height>320</height>
              </size>
             </property>
@@ -230,6 +235,18 @@ color: rgb(255, 255, 255);
              <size>
               <width>16777215</width>
               <height>350</height>
+             </size>
+            </property>
+            <property name="sizeIncrement">
+             <size>
+              <width>1</width>
+              <height>1</height>
+             </size>
+            </property>
+            <property name="baseSize">
+             <size>
+              <width>1</width>
+              <height>1</height>
              </size>
             </property>
             <property name="styleSheet">
@@ -253,8 +270,14 @@ color: rgb(255, 255, 255);
             </property>
             <property name="minimumSize">
              <size>
-              <width>0</width>
+              <width>551</width>
               <height>300</height>
+             </size>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>16777215</width>
+              <height>350</height>
              </size>
             </property>
             <property name="styleSheet">
@@ -275,8 +298,14 @@ color: rgb(255, 255, 255);
             </property>
             <property name="minimumSize">
              <size>
-              <width>0</width>
+              <width>551</width>
               <height>300</height>
+             </size>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>16777215</width>
+              <height>350</height>
              </size>
             </property>
             <property name="styleSheet">
@@ -297,8 +326,14 @@ color: rgb(255, 255, 255);
             </property>
             <property name="minimumSize">
              <size>
-              <width>0</width>
+              <width>551</width>
               <height>300</height>
+             </size>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>16777215</width>
+              <height>350</height>
              </size>
             </property>
             <property name="styleSheet">
@@ -319,8 +354,14 @@ color: rgb(255, 255, 255);
             </property>
             <property name="minimumSize">
              <size>
-              <width>0</width>
+              <width>551</width>
               <height>300</height>
+             </size>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>16777215</width>
+              <height>350</height>
              </size>
             </property>
             <property name="styleSheet">
@@ -338,6 +379,18 @@ color: rgb(255, 255, 255);
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
+            </property>
+            <property name="minimumSize">
+             <size>
+              <width>551</width>
+              <height>300</height>
+             </size>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>16777215</width>
+              <height>350</height>
+             </size>
             </property>
             <property name="styleSheet">
              <string notr="true">background-color: rgb(29, 29, 29);</string>
@@ -370,9 +423,127 @@ color: rgb(255, 255, 255);
   </widget>
   <widget class="QStatusBar" name="statusbar">
    <property name="styleSheet">
-    <string notr="true">background-color: rgb(29, 29, 29);</string>
+    <string notr="true">background-color: rgb(29, 29, 29);
+color: rgb(255, 255, 255);</string>
    </property>
   </widget>
+  <widget class="QMenuBar" name="menuBar">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>1280</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(35, 35, 35);
+selection-background-color: rgb(100, 100, 100);
+color: rgb(255, 255, 255);</string>
+   </property>
+   <widget class="QMenu" name="processMenu">
+    <property name="title">
+     <string>程序</string>
+    </property>
+    <addaction name="start"/>
+    <addaction name="stop"/>
+   </widget>
+   <widget class="QMenu" name="systemMenu">
+    <property name="title">
+     <string>系统</string>
+    </property>
+    <addaction name="chen1"/>
+    <addaction name="chen2"/>
+    <addaction name="li"/>
+    <addaction name="yv1"/>
+    <addaction name="yv2"/>
+    <addaction name="wang"/>
+    <addaction name="pan"/>
+    <addaction name="yue"/>
+   </widget>
+   <widget class="QMenu" name="setupMenu">
+    <property name="title">
+     <string>设置</string>
+    </property>
+    <addaction name="openConfigFile"/>
+   </widget>
+   <widget class="QMenu" name="viewMenu">
+    <property name="title">
+     <string>显示</string>
+    </property>
+    <addaction name="fullScreen"/>
+    <addaction name="exitFullScreen"/>
+   </widget>
+   <addaction name="processMenu"/>
+   <addaction name="systemMenu"/>
+   <addaction name="viewMenu"/>
+   <addaction name="setupMenu"/>
+  </widget>
+  <action name="openConfigFile">
+   <property name="text">
+    <string>打开配置文件</string>
+   </property>
+  </action>
+  <action name="start">
+   <property name="text">
+    <string>启动</string>
+   </property>
+  </action>
+  <action name="stop">
+   <property name="text">
+    <string>终止</string>
+   </property>
+  </action>
+  <action name="chen1">
+   <property name="text">
+    <string>智能异常事件监测与保护系统</string>
+   </property>
+  </action>
+  <action name="chen2">
+   <property name="text">
+    <string>产品工件智能角度检测系统</string>
+   </property>
+  </action>
+  <action name="li">
+   <property name="text">
+    <string>传感器数据采集分析与可视化系统</string>
+   </property>
+  </action>
+  <action name="yv1">
+   <property name="text">
+    <string>生产线报警智能检测分析系统</string>
+   </property>
+  </action>
+  <action name="yv2">
+   <property name="text">
+    <string>工厂CPS产线建模与分析系统</string>
+   </property>
+  </action>
+  <action name="wang">
+   <property name="text">
+    <string>工厂侧板效率智能检测系统</string>
+   </property>
+  </action>
+  <action name="pan">
+   <property name="text">
+    <string>产品包装配件完整性监测系统</string>
+   </property>
+  </action>
+  <action name="yue">
+   <property name="text">
+    <string>厚板线OEE效率检测系统</string>
+   </property>
+  </action>
+  <action name="fullScreen">
+   <property name="text">
+    <string>全屏模式</string>
+   </property>
+  </action>
+  <action name="exitFullScreen">
+   <property name="text">
+    <string>退出全屏</string>
+   </property>
+  </action>
  </widget>
  <resources/>
  <connections/>
